<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="no_result_available">Hasil Tidak Terdeteksi</string>
    <string name="image_classifier_failed">"Gagal "</string>
    <string name="preview_image">Gambar</string>
    <string name="info">Articles</string>
    <string name="history">History</string>
    <string name="save">Save</string>
    <string name="hasilPrediksi">Hasil Prediksi</string>
    <string name="scorePrediksi">Score Prediksi</string>
    <string name="title">title</string>
    <string name="description">desc</string>
    <string name="tidak_ada_koneksi_internet">Tidak ada koneksi internet</string>
    <string name="history_masih_kosong">History masih kosong</string>
    <string name="delete">Delete</string>
</resources>