<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_place_holder"/>

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:gravity="center"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/result_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/result"
            android:gravity="center"
            android:textSize="17sp"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"
            android:text="@string/save"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"
            android:text="@string/delete"
            android:textSize="15sp"/>


    </LinearLayout>
</ScrollView>